--- a/.gitattributes
+++ b/.gitattributes
@@ -918,6 +918,12 @@ lddi.knx/lddi.pom.knx/pom.xml -text
 lddi.pom/composite/ASL2.0.txt -text
 lddi.pom/composite/NOTICE.txt -text
 lddi.pom/composite/pom.xml -text
+lddi.pom/lddi.karaf.feature/ASL2.0.txt -text
+lddi.pom/lddi.karaf.feature/NOTICE.txt -text
+lddi.pom/lddi.karaf.feature/README.txt -text
+lddi.pom/lddi.karaf.feature/pom.xml -text
+lddi.pom/lddi.karaf.feature/src/features/features.xml -text
+lddi.pom/lddi.karaf.feature/src/features/lddi.knx.xml -text
 lddi.pom/pom.xml -text
 lddi.zigbee/lddi.pom.zigbee/pom.xml -text
 lddi.zigbee/lddi.zigbee.commissioning.adapter/ASL2.0.txt -text
