--- a/lddi.knx/lddi.knx.refinementdrivers/lddi.knx.refinementdriver.dpt1.activityhub/pom.xml
+++ b/lddi.knx/lddi.knx.refinementdrivers/lddi.knx.refinementdriver.dpt1.activityhub/pom.xml
@@ -30,6 +30,7 @@
     </developer>
   </developers>
   <dependencies>
+  
     <dependency>
       <groupId>org.apache.felix</groupId>
       <artifactId>org.osgi.core</artifactId>
@@ -40,6 +41,7 @@
       <version>1.0</version>
       <scope>compile</scope>
     </dependency>
+    
     <dependency>
       <groupId>org.universAAL.lddi</groupId>
       <artifactId>lddi.knx.library</artifactId>
@@ -47,7 +49,7 @@
     <dependency>
       <groupId>org.universAAL.lddi</groupId>
       <artifactId>lddi.lib.activityhub</artifactId>
-      <version>2.0.2-SNAPSHOT</version>
+      <!-- <version>2.0.2-SNAPSHOT</version> -->
     </dependency>
   </dependencies>
   <build>
