--- a/lddi.pom/lddi.karaf.feature/pom.xml
+++ b/lddi.pom/lddi.karaf.feature/pom.xml
@@ -10,7 +10,7 @@
   <artifactId>lddi.karaf.feature</artifactId>
   <groupId>org.universAAL.lddi</groupId>
   <version>2.0.4-SNAPSHOT</version>
-  <name>universAAL Karaf Feature LDDI</name>
+  <name>universAAL LDDI Karaf Feature</name>
   <properties>
     <commons-beanutils-version>1.8.3</commons-beanutils-version>
     <commons-codec-version>1.4</commons-codec-version>
