--- a/lddi.pom/pom.xml
+++ b/lddi.pom/pom.xml
@@ -64,6 +64,26 @@
 		<artifactId>lddi.karaf.feature</artifactId>
 		<version>2.0.4-SNAPSHOT</version>
       </dependency>
+      <dependency>
+        <groupId>org.universAAL.lddi</groupId>
+        <artifactId>lddi.lib.activityhub</artifactId>
+        <version>2.0.3-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.universAAL.lddi</groupId>
+        <artifactId>lddi.lib.ieeex73std</artifactId>
+        <version>2.0.3-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.universAAL.lddi</groupId>
+        <artifactId>lddi.exporter.activityhub</artifactId>
+        <version>2.0.3-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.universAAL.lddi</groupId>
+        <artifactId>lddi.exporter.x73</artifactId>
+        <version>2.0.3-SNAPSHOT</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
  <repositories>
