--- a/lddi.config/lddi.pom.config/pom.xml
+++ b/lddi.config/lddi.pom.config/pom.xml
@@ -21,13 +21,15 @@
     <dependencies>
       <dependency>
         <groupId>org.universAAL.lddi</groupId>
-        <artifactId>lddi.knx.devicemanager</artifactId>
-        <version>2.0.2-SNAPSHOT</version>
+        <artifactId>lddi.knx.devicemanager.config</artifactId>
+        <version>2.0.4-SNAPSHOT</version>
+        <type>cfg</type>
       </dependency>
       <dependency>
         <groupId>org.universAAL.lddi</groupId>
-        <artifactId>lddi.knx.networkdriver</artifactId>
-        <version>2.0.2-SNAPSHOT</version>
+        <artifactId>lddi.knx.networkdriver.config</artifactId>
+        <version>2.0.4-SNAPSHOT</version>
+        <type>cfg</type>
       </dependency>
     </dependencies>
   </dependencyManagement>
