checked feature, formated some poms.

--- a/.gitignore
+++ b/.gitignore
@@ -85,6 +85,7 @@ lddi.pom/composite/target
 lddi.pom/lddi.karaf.feature/.classpath
 lddi.pom/lddi.karaf.feature/.project
 lddi.pom/lddi.karaf.feature/.settings
+lddi.pom/lddi.karaf.feature/target
 lddi.pom/target
 lddi.zigbee/lddi.pom.zigbee/target
 lddi.zigbee/lddi.zigbee.commissioning.adapter/.classpath
