--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,8 @@ lddi.pom/lddi.karaf.feature/.project
 lddi.pom/lddi.karaf.feature/.settings
 lddi.pom/lddi.karaf.feature/target
 lddi.pom/target
+lddi.zigbee/lddi.pom.zigbee/.project
+lddi.zigbee/lddi.pom.zigbee/.settings
 lddi.zigbee/lddi.pom.zigbee/target
 lddi.zigbee/lddi.zigbee.commissioning.adapter/.classpath
 lddi.zigbee/lddi.zigbee.commissioning.adapter/.project
