changing from explicit dependencies to Felix to generic dependencies to osgi, ie:  <dependency>   <groupId>org.apache.felix</groupId>   <artifactId>org.osgi.core</artifactId> </dependency> is changed to: <dependency>   <groupId>org.osgi</groupId>   <artifactId>org.osgi.core</artifactId> </dependency>
AND :
<dependency>
  <groupId>org.apache.felix</groupId>
  <artifactId>org.osgi.compendium</artifactId>
</dependency>
(or R4_compendium)
is changed to:
<dependency>
  <groupId>org.osgi</groupId>
  <artifactId>org.osgi.compendium</artifactId>
</dependency>

--- a/lddi.fs20/lddi.fs20.connector/pom.xml
+++ b/lddi.fs20/lddi.fs20.connector/pom.xml
@@ -15,7 +15,7 @@
   <description>Connects the FS20 network to OSGi</description>
   <dependencies>
     <dependency>
-      <groupId>org.apache.felix</groupId>
+      <groupId>org.osgi</groupId>
       <artifactId>org.osgi.core</artifactId>
     </dependency>
     <dependency>
