--- a/lddi.bluetooth/lddi.continuahdpmanager.caller.test/pom.xml
+++ b/lddi.bluetooth/lddi.continuahdpmanager.caller.test/pom.xml
@@ -19,7 +19,7 @@
   </organization>
   <dependencies>
     <dependency>
-      <groupId>org.apache.felix</groupId>
+      <groupId>org.osgi</groupId>
       <artifactId>org.osgi.core</artifactId>
     </dependency>
     <dependency>
