--- a/lddi.common/lddi.lib.activityhub/pom.xml
+++ b/lddi.common/lddi.lib.activityhub/pom.xml
@@ -31,7 +31,7 @@
   </developers>
   <dependencies>
     <dependency>
-      <groupId>org.apache.felix</groupId>
+      <groupId>org.osgi</groupId>
       <artifactId>org.osgi.core</artifactId>
     </dependency>
     <dependency>
