--- a/lddi.zigbee/lddi.zigbee.exporter/pom.xml
+++ b/lddi.zigbee/lddi.zigbee.exporter/pom.xml
@@ -20,7 +20,7 @@
   </organization>
   <dependencies>
     <dependency>
-      <groupId>org.apache.felix</groupId>
+      <groupId>org.osgi</groupId>
       <artifactId>org.osgi.core</artifactId>
     </dependency>
     <dependency>
