--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,11 @@ lddi.zigbee/lddi.zigbee.exporter/.classpath
 lddi.zigbee/lddi.zigbee.exporter/.project
 lddi.zigbee/lddi.zigbee.exporter/.settings
 lddi.zigbee/lddi.zigbee.exporter/target
+lddi.zwave/lddi.pom.zwave/.classpath
+lddi.zwave/lddi.pom.zwave/.project
+lddi.zwave/lddi.pom.zwave/.settings
+lddi.zwave/lddi.pom.zwave/target
+lddi.zwave/lddi.zwave.exporter/.classpath
+lddi.zwave/lddi.zwave.exporter/.project
+lddi.zwave/lddi.zwave.exporter/.settings
+lddi.zwave/lddi.zwave.exporter/target
