added CHP test suite.

--- a/lddi.pom/lddi.karaf.feature/pom.xml
+++ b/lddi.pom/lddi.karaf.feature/pom.xml
@@ -105,6 +105,14 @@
       <groupId>org.universAAL.lddi</groupId>
       <artifactId>lddi.bluetooth.continuahdpmanagerservice</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.universAAL.lddi</groupId>
+      <artifactId>lddi.continuahdpmanager.caller.test</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.universAAL.lddi</groupId>
+      <artifactId>lddi.continuahdpmanager.subscriber.test</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <filters>
