--- a/lddi.knx/lddi.knx.exporter/pom.xml
+++ b/lddi.knx/lddi.knx.exporter/pom.xml
@@ -30,10 +30,14 @@
     </developer>
   </developers>
   <dependencies>
+<!--    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>org.osgi.core</artifactId>
+    </dependency> -->
     <dependency>
       <groupId>org.osgi</groupId>
       <artifactId>org.osgi.core</artifactId>
-    </dependency>
+    </dependency>    
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
