--- a/lddi.knx/lddi.knx.networkdriver/pom.xml
+++ b/lddi.knx/lddi.knx.networkdriver/pom.xml
@@ -36,11 +36,13 @@
     </dependency>
     <dependency>
       <groupId>org.osgi</groupId>
-      <artifactId>org.osgi.core</artifactId>
+      <artifactId>osgi_R4_compendium</artifactId>
+      <version>1.0</version>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.osgi</groupId>
-      <artifactId>org.osgi.compendium</artifactId>
+      <artifactId>org.osgi.core</artifactId>
     </dependency>
     <dependency>
       <groupId>at.ac.tuwien.auto</groupId>
