standarizing reference to osgi compendium service definition, removed when not needed.

--- a/lddi.fs20/lddi.fs20.connector/pom.xml
+++ b/lddi.fs20/lddi.fs20.connector/pom.xml
@@ -46,9 +46,7 @@
     </dependency>
     <dependency>
       <groupId>org.osgi</groupId>
-      <artifactId>osgi_R4_compendium</artifactId>
-      <version>1.0</version>
-      <scope>compile</scope>
+      <artifactId>org.osgi.compendium</artifactId>
     </dependency>
   </dependencies>
   <build>
