--- a/lddi.knx/lddi.knx.library/pom.xml
+++ b/lddi.knx/lddi.knx.library/pom.xml
@@ -36,9 +36,7 @@
     </dependency>
     <dependency>
       <groupId>org.osgi</groupId>
-      <artifactId>osgi_R4_compendium</artifactId>
-      <version>1.0</version>
-      <scope>compile</scope>
+      <artifactId>org.osgi.compendium</artifactId>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
