--- a/lddi.config/lddi.pom.config/pom.xml
+++ b/lddi.config/lddi.pom.config/pom.xml
@@ -22,13 +22,13 @@
       <dependency>
         <groupId>org.universAAL.lddi</groupId>
         <artifactId>lddi.knx.devicemanager.config</artifactId>
-        <version>2.0.4-SNAPSHOT</version>
+        <version>2.0.5-SNAPSHOT</version>
         <type>cfg</type>
       </dependency>
       <dependency>
         <groupId>org.universAAL.lddi</groupId>
         <artifactId>lddi.knx.networkdriver.config</artifactId>
-        <version>2.0.4-SNAPSHOT</version>
+        <version>2.0.5-SNAPSHOT</version>
         <type>cfg</type>
       </dependency>
     </dependencies>
@@ -47,6 +47,20 @@
           </execution>
         </executions>
       </plugin>
+		<plugin>
+			<groupId>org.universAAL.support</groupId>
+			<artifactId>uaal-maven-plugin</artifactId>
+			<executions>
+				<execution>
+					<id>CompositeMojo</id>
+					<phase>none</phase>
+				</execution>
+				<execution>
+					<id>TestMojo</id>
+					<phase>none</phase>
+				</execution>
+			</executions>				
+		</plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
