--- a/lddi.bluetooth/lddi.pom.bluetooth/pom.xml
+++ b/lddi.bluetooth/lddi.pom.bluetooth/pom.xml
@@ -31,6 +31,13 @@
     <dependencies>
       <dependency>
         <groupId>org.universAAL.lddi</groupId>
+		<artifactId>lddi.pom.common</artifactId>
+		<version>2.0.5-SNAPSHOT</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.universAAL.lddi</groupId>
         <artifactId>lddi.bluetooth.continuahdpmanagerservice</artifactId>
         <version>2.0.3-SNAPSHOT</version>
       </dependency>
