--- a/lddi.pom/pom.xml
+++ b/lddi.pom/pom.xml
@@ -66,26 +66,26 @@
         <version>2.0.5-SNAPSHOT</version>
       </dependency>
       <!-- These dependencies have to be reviewed, maybe they don't belong here -->
-      <dependency>
-        <groupId>org.universAAL.lddi</groupId>
-        <artifactId>lddi.lib.activityhub</artifactId>
-        <version>2.0.4-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.universAAL.lddi</groupId>
-        <artifactId>lddi.lib.ieeex73std</artifactId>
-        <version>2.0.4-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.universAAL.lddi</groupId>
-        <artifactId>lddi.exporter.activityhub</artifactId>
-        <version>2.0.4-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.universAAL.lddi</groupId>
-        <artifactId>lddi.exporter.x73</artifactId>
-        <version>2.0.4-SNAPSHOT</version>
-      </dependency>
+<!--       <dependency> -->
+<!--         <groupId>org.universAAL.lddi</groupId> -->
+<!--         <artifactId>lddi.lib.activityhub</artifactId> -->
+<!--         <version>2.0.4-SNAPSHOT</version> -->
+<!--       </dependency> -->
+<!--       <dependency> -->
+<!--         <groupId>org.universAAL.lddi</groupId> -->
+<!--         <artifactId>lddi.lib.ieeex73std</artifactId> -->
+<!--         <version>2.0.4-SNAPSHOT</version> -->
+<!--       </dependency> -->
+<!--       <dependency> -->
+<!--         <groupId>org.universAAL.lddi</groupId> -->
+<!--         <artifactId>lddi.exporter.activityhub</artifactId> -->
+<!--         <version>2.0.4-SNAPSHOT</version> -->
+<!--       </dependency> -->
+<!--       <dependency> -->
+<!--         <groupId>org.universAAL.lddi</groupId> -->
+<!--         <artifactId>lddi.exporter.x73</artifactId> -->
+<!--         <version>2.0.4-SNAPSHOT</version> -->
+<!--       </dependency> -->
     </dependencies>
   </dependencyManagement>
   <repositories>
