--- a/lddi.bluetooth/lddi.continuahdpmanager.subscriber.test/pom.xml
+++ b/lddi.bluetooth/lddi.continuahdpmanager.subscriber.test/pom.xml
@@ -48,11 +48,10 @@
         <configuration>
           <instructions>
             <Bundle-Name>${project.name}</Bundle-Name>
-            <Bundle-Activator>org.universAAL.continua.subscriber.test.main.Activator</Bundle-Activator>
+            <Bundle-Activator>org.universAAL.lddi.subscriber.test.main.Activator</Bundle-Activator>
             <Bundle-Description>${project.description}</Bundle-Description>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
             <Include-Resource>src/main/resources</Include-Resource>
-            <Import-Package>*</Import-Package>
           </instructions>
         </configuration>
       </plugin>
