--- a/lddi.pom/lddi.karaf.feature/pom.xml
+++ b/lddi.pom/lddi.karaf.feature/pom.xml
@@ -12,6 +12,11 @@
   <artifactId>lddi.karaf.feature</artifactId>
   <version>2.0.5-SNAPSHOT</version>
   <name>universAAL LDDI Karaf Feature</name>
+  <scm>
+    <connection>${svn.base}/lddi.pom/${project.artifactId}</connection>
+    <developerConnection>${svn.base}/lddi.pom/${project.artifactId}</developerConnection>
+    <url>${svn.base.url}%2Flddi.pom%2F${project.artifactId}</url>
+  </scm>
   <properties>
     <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
   </properties>
