--- a/lddi.common/lddi.lib.activityhub/pom.xml
+++ b/lddi.common/lddi.lib.activityhub/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.universAAL.lddi</groupId>
     <artifactId>lddi.pom.common</artifactId>
-    <version>2.0.5-SNAPSHOT</version>
+    <version>3.0.0</version>
     <relativePath>../lddi.pom.common</relativePath>
   </parent>
   <artifactId>lddi.lib.activityhub</artifactId>
-  <version>2.0.4-SNAPSHOT</version>
+  <version>3.0.0</version>
   <packaging>bundle</packaging>
   <name>universAAL LDDI Library for ISO/IEEE 11073 standard - ActivityHub Specification</name>
   <description>ISO 11073 Device Categories for OSGi DeviceManager are Interfaces for all ISO 11073 sensor types, specifying methods for communication with device services.</description>
