--- a/lddi.common/lddi.pom.common/pom.xml
+++ b/lddi.common/lddi.pom.common/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.universAAL.lddi</groupId>
     <artifactId>lddi.pom</artifactId>
-    <version>2.0.5-SNAPSHOT</version>
+    <version>3.0.0</version>
     <relativePath>../../lddi.pom</relativePath>
   </parent>
   <artifactId>lddi.pom.common</artifactId>
-  <version>2.0.5-SNAPSHOT</version>
+  <version>3.0.0</version>
   <packaging>pom</packaging>
   <name>universAAL LDDI Common Suite</name>
   <description>LDDI Common components</description>
@@ -19,30 +19,6 @@
     <module>../lddi.lib.activityhub</module>
     <module>../lddi.lib.ieeex73std</module>
   </modules>
-  <dependencyManagement>
-  	<dependencies>
-      <dependency>
-        <groupId>org.universAAL.lddi</groupId>
-        <artifactId>lddi.lib.activityhub</artifactId>
-        <version>2.0.4-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.universAAL.lddi</groupId>
-        <artifactId>lddi.lib.ieeex73std</artifactId>
-        <version>2.0.4-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.universAAL.lddi</groupId>
-        <artifactId>lddi.exporter.activityhub</artifactId>
-        <version>2.0.4-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.universAAL.lddi</groupId>
-        <artifactId>lddi.exporter.x73</artifactId>
-        <version>2.0.4-SNAPSHOT</version>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
   <scm>
     <connection>${svn.base}/lddi.common/${project.artifactId}</connection>
     <developerConnection>${svn.base}/lddi.common/${project.artifactId}</developerConnection>
@@ -51,4 +27,28 @@
   <properties>
     <nameMatchString>^universAAL LDDI .*</nameMatchString>
   </properties>
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.universAAL.lddi</groupId>
+        <artifactId>lddi.lib.activityhub</artifactId>
+        <version>3.0.0</version>
+      </dependency>
+      <dependency>
+        <groupId>org.universAAL.lddi</groupId>
+        <artifactId>lddi.lib.ieeex73std</artifactId>
+        <version>3.0.0</version>
+      </dependency>
+      <dependency>
+        <groupId>org.universAAL.lddi</groupId>
+        <artifactId>lddi.exporter.activityhub</artifactId>
+        <version>3.0.0</version>
+      </dependency>
+      <dependency>
+        <groupId>org.universAAL.lddi</groupId>
+        <artifactId>lddi.exporter.x73</artifactId>
+        <version>3.0.0</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 </project>
