--- a/lddi.config/lddi.pom.config/pom.xml
+++ b/lddi.config/lddi.pom.config/pom.xml
@@ -5,31 +5,31 @@
   <parent>
     <groupId>org.universAAL.lddi</groupId>
     <artifactId>lddi.pom</artifactId>
-    <version>2.0.5-SNAPSHOT</version>
+    <version>3.0.0</version>
     <relativePath>../../lddi.pom</relativePath>
   </parent>
   <artifactId>lddi.pom.config</artifactId>
-  <version>2.0.5-SNAPSHOT</version>
+  <version>3.0.0</version>
   <packaging>pom</packaging>
   <name>universAAL LDDI Suite (Config)</name>
   <description>The set of artefacts realizing the universAAL Local Device Discovery and Integration (Configuration)</description>
   <modules>
     <module>../lddi.knx.devicemanager.config</module>
-    <module>../lddi.knx.networkdriver.config</module>
+	<module>../lddi.knx.networkdriver.config</module>
   </modules>
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>org.universAAL.lddi</groupId>
         <artifactId>lddi.knx.devicemanager.config</artifactId>
-        <version>2.0.5-SNAPSHOT</version>
-        <type>cfg</type>
+      <type>cfg</type>
+        <version>3.0.0</version>
       </dependency>
       <dependency>
         <groupId>org.universAAL.lddi</groupId>
         <artifactId>lddi.knx.networkdriver.config</artifactId>
-        <version>2.0.5-SNAPSHOT</version>
-        <type>cfg</type>
+      <type>cfg</type>
+        <version>3.0.0</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -47,20 +47,20 @@
           </execution>
         </executions>
       </plugin>
-		<plugin>
-			<groupId>org.universAAL.support</groupId>
-			<artifactId>uaal-maven-plugin</artifactId>
-			<executions>
-				<execution>
-					<id>CompositeMojo</id>
-					<phase>none</phase>
-				</execution>
-				<execution>
-					<id>TestMojo</id>
-					<phase>none</phase>
-				</execution>
-			</executions>				
-		</plugin>
+      <plugin>
+        <groupId>org.universAAL.support</groupId>
+        <artifactId>uaal-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>CompositeMojo</id>
+            <phase>none</phase>
+          </execution>
+          <execution>
+            <id>TestMojo</id>
+            <phase>none</phase>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
