--- a/lddi.fs20/lddi.pom.fs20/pom.xml
+++ b/lddi.fs20/lddi.pom.fs20/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.universAAL.lddi</groupId>
     <artifactId>lddi.pom</artifactId>
-    <version>2.0.5-SNAPSHOT</version>
+    <version>3.0.0</version>
     <relativePath>../../lddi.pom</relativePath>
   </parent>
   <artifactId>lddi.pom.fs20</artifactId>
-  <version>2.0.5-SNAPSHOT</version>
+  <version>3.0.0</version>
   <packaging>pom</packaging>
   <name>universAAL LDDI FS20 Suite</name>
   <description>Integration of FS20 components</description>
@@ -30,12 +30,12 @@
       <dependency>
         <groupId>org.universAAL.lddi</groupId>
         <artifactId>lddi.fs20.connector</artifactId>
-        <version>2.0.3-SNAPSHOT</version>
+        <version>3.0.0</version>
       </dependency>
       <dependency>
         <groupId>org.universAAL.lddi</groupId>
         <artifactId>lddi.fs20.exporter</artifactId>
-        <version>2.0.3-SNAPSHOT</version>
+        <version>3.0.0</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
