--- a/lddi.knx/lddi.knx.exporter/pom.xml
+++ b/lddi.knx/lddi.knx.exporter/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.universAAL.lddi</groupId>
     <artifactId>lddi.pom.knx</artifactId>
-    <version>2.0.5-SNAPSHOT</version>
+    <version>3.0.0</version>
     <relativePath>../lddi.pom.knx</relativePath>
   </parent>
   <artifactId>lddi.knx.exporter</artifactId>
-  <version>2.0.4-SNAPSHOT</version>
+  <version>3.0.0</version>
   <packaging>bundle</packaging>
   <name>universAAL LDDI KNX Exporter</name>
   <description>Hardware exporter of KNX Home Automation components for the universAAL middleware using uAAL Device Ontology</description>
@@ -30,14 +30,10 @@
     </developer>
   </developers>
   <dependencies>
-<!--    <dependency>
-      <groupId>org.osgi</groupId>
-      <artifactId>org.osgi.core</artifactId>
-    </dependency> -->
     <dependency>
       <groupId>org.osgi</groupId>
       <artifactId>org.osgi.core</artifactId>
-    </dependency>    
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
