--- a/lddi.pom/pom.xml
+++ b/lddi.pom/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.universAAL</groupId>
     <artifactId>uAAL.pom</artifactId>
-    <version>2.0.2-SNAPSHOT</version>
+    <version>3.0.0</version>
   </parent>
   <groupId>org.universAAL.lddi</groupId>
   <artifactId>lddi.pom</artifactId>
-  <version>2.0.5-SNAPSHOT</version>
+  <version>3.0.0</version>
   <packaging>pom</packaging>
   <name>universAAL LDDI Suite</name>
   <description>The set of artefacts realizing the universAAL Local Device Discovery and Integration</description>
@@ -44,48 +44,27 @@
       <dependency>
         <groupId>org.universAAL.middleware</groupId>
         <artifactId>mw.pom.core</artifactId>
-        <version>2.0.4-SNAPSHOT</version>
+        <version>3.0.0</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
       <dependency>
         <groupId>org.universAAL.ontology</groupId>
         <artifactId>ont.pom</artifactId>
-        <version>2.0.4-SNAPSHOT</version>
+        <version>3.0.0</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
       <dependency>
         <groupId>org.universAAL.lddi</groupId>
         <artifactId>lddi.composite</artifactId>
-        <version>2.0.4-SNAPSHOT</version>
+        <version>3.0.0</version>
       </dependency>
       <dependency>
         <groupId>org.universAAL.lddi</groupId>
         <artifactId>lddi.karaf.feature</artifactId>
-        <version>2.0.5-SNAPSHOT</version>
+        <version>3.0.0</version>
       </dependency>
-      <!-- These dependencies have to be reviewed, maybe they don't belong here -->
-<!--       <dependency> -->
-<!--         <groupId>org.universAAL.lddi</groupId> -->
-<!--         <artifactId>lddi.lib.activityhub</artifactId> -->
-<!--         <version>2.0.4-SNAPSHOT</version> -->
-<!--       </dependency> -->
-<!--       <dependency> -->
-<!--         <groupId>org.universAAL.lddi</groupId> -->
-<!--         <artifactId>lddi.lib.ieeex73std</artifactId> -->
-<!--         <version>2.0.4-SNAPSHOT</version> -->
-<!--       </dependency> -->
-<!--       <dependency> -->
-<!--         <groupId>org.universAAL.lddi</groupId> -->
-<!--         <artifactId>lddi.exporter.activityhub</artifactId> -->
-<!--         <version>2.0.4-SNAPSHOT</version> -->
-<!--       </dependency> -->
-<!--       <dependency> -->
-<!--         <groupId>org.universAAL.lddi</groupId> -->
-<!--         <artifactId>lddi.exporter.x73</artifactId> -->
-<!--         <version>2.0.4-SNAPSHOT</version> -->
-<!--       </dependency> -->
     </dependencies>
   </dependencyManagement>
   <repositories>
