--- a/lddi.zigbee/lddi.zigbee.commissioning.adapter/pom.xml
+++ b/lddi.zigbee/lddi.zigbee.commissioning.adapter/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.universAAL.lddi</groupId>
     <artifactId>lddi.pom.zigbee</artifactId>
-    <version>2.0.5-SNAPSHOT</version>
+    <version>3.0.0</version>
     <relativePath>../lddi.pom.zigbee</relativePath>
   </parent>
   <artifactId>lddi.zigbee.commissioning.adapter</artifactId>
-  <version>0.3.2-SNAPSHOT</version>
+  <version>3.0.0</version>
   <packaging>bundle</packaging>
   <name>universAAL LDDI ZigBee commissioning bundle</name>
   <dependencies>
