--- a/lddi.zwave/lddi.pom.zwave/pom.xml
+++ b/lddi.zwave/lddi.pom.zwave/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.universAAL.lddi</groupId>
     <artifactId>lddi.pom</artifactId>
-    <version>2.0.5-SNAPSHOT</version>
+    <version>3.0.0</version>
     <relativePath>../../lddi.pom</relativePath>
   </parent>
   <artifactId>lddi.pom.zwave</artifactId>
-  <version>2.0.5-SNAPSHOT</version>
+  <version>3.0.0</version>
   <packaging>pom</packaging>
   <name>universAAL LDDI Zwave Suite</name>
   <description>Integration of KNX components</description>
@@ -29,7 +29,7 @@
       <dependency>
         <groupId>org.universAAL.lddi</groupId>
         <artifactId>lddi.zwave.exporter</artifactId>
-        <version>2.0.5-SNAPSHOT</version>
+        <version>3.0.0</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
