--- a/lddi.config/lddi.pom.config/pom.xml
+++ b/lddi.config/lddi.pom.config/pom.xml
@@ -5,31 +5,31 @@
   <parent>
     <groupId>org.universAAL.lddi</groupId>
     <artifactId>lddi.pom</artifactId>
-    <version>3.0.0</version>
+    <version>3.0.1-SNAPSHOT</version>
     <relativePath>../../lddi.pom</relativePath>
   </parent>
   <artifactId>lddi.pom.config</artifactId>
-  <version>3.0.0</version>
+  <version>3.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>universAAL LDDI Suite (Config)</name>
   <description>The set of artefacts realizing the universAAL Local Device Discovery and Integration (Configuration)</description>
   <modules>
     <module>../lddi.knx.devicemanager.config</module>
-	<module>../lddi.knx.networkdriver.config</module>
+    <module>../lddi.knx.networkdriver.config</module>
   </modules>
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>org.universAAL.lddi</groupId>
         <artifactId>lddi.knx.devicemanager.config</artifactId>
-      <type>cfg</type>
-        <version>3.0.0</version>
+        <version>3.0.1-SNAPSHOT</version>
+        <type>cfg</type>
       </dependency>
       <dependency>
         <groupId>org.universAAL.lddi</groupId>
         <artifactId>lddi.knx.networkdriver.config</artifactId>
-      <type>cfg</type>
-        <version>3.0.0</version>
+        <version>3.0.1-SNAPSHOT</version>
+        <type>cfg</type>
       </dependency>
     </dependencies>
   </dependencyManagement>
