--- a/lddi.zwave/lddi.zwave.exporter/pom.xml
+++ b/lddi.zwave/lddi.zwave.exporter/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.universAAL.lddi</groupId>
     <artifactId>lddi.pom.zwave</artifactId>
-    <version>3.0.0</version>
+    <version>3.0.1-SNAPSHOT</version>
     <relativePath>../lddi.pom.zwave</relativePath>
   </parent>
   <artifactId>lddi.zwave.exporter</artifactId>
-  <version>3.0.0</version>
+  <version>3.0.1-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>universAAL LDDI ZWave Exporter</name>
   <description></description>
