--- a/lddi.config/lddi.knx.networkdriver.config/pom.xml
+++ b/lddi.config/lddi.knx.networkdriver.config/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.universAAL.lddi</groupId>
     <artifactId>lddi.pom.config</artifactId>
-    <version>3.0.0</version>
+    <version>3.0.1-SNAPSHOT</version>
     <relativePath>../lddi.pom.config</relativePath>
   </parent>
   <artifactId>lddi.knx.networkdriver.config</artifactId>
-  <version>3.0.0</version>
+  <version>3.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>universAAL LDDI KNX network driver (config)</name>
   <inceptionYear>2013</inceptionYear>
