--- a/.gitattributes
+++ b/.gitattributes
@@ -20,6 +20,9 @@ lddi.bluetooth/dll/windows/x86_32/ASL2.0.txt -text
 lddi.bluetooth/dll/windows/x86_32/NOTICE.txt -text
 lddi.bluetooth/dll/windows/x86_32/hdpNativeLib_win_x86_32.dll -text
 lddi.bluetooth/dll/windows/x86_64/README.txt -text
+lddi.bluetooth/doc/javadoc.rar -text
+lddi.bluetooth/doc/uAAL_developers_guide.odt -text
+lddi.bluetooth/doc/uAAL_developers_guide.pdf -text
 lddi.bluetooth/lddi.bluetooth.continuahdpmanagerservice/ASL2.0.txt -text
 lddi.bluetooth/lddi.bluetooth.continuahdpmanagerservice/META-INF/MANIFEST.MF -text
 lddi.bluetooth/lddi.bluetooth.continuahdpmanagerservice/NOTICE.txt -text
