--- a/lddi.knx/lddi.pom.knx/pom.xml
+++ b/lddi.knx/lddi.pom.knx/pom.xml
@@ -18,6 +18,7 @@
     <module>../lddi.knx.exporter</module>
     <module>../lddi.knx.library</module>
     <module>../lddi.knx.networkdriver</module>
+    <module>../lddi.knx.refinementdrivers/lddi.knx.refinementdriver.dpt1.activityhub</module>
   </modules>
   <scm>
     <connection>${svn.base}/lddi.knx/${project.artifactId}</connection>
@@ -29,6 +30,13 @@
   </properties>
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>org.universAAL.lddi</groupId>
+        <artifactId>lddi.pom.common</artifactId>
+        <version>3.0.0</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
       <dependency>
         <groupId>org.universAAL.lddi</groupId>
         <artifactId>lddi.knx.devicemanager</artifactId>
@@ -52,7 +60,7 @@
       <dependency>
         <groupId>org.universAAL.lddi</groupId>
         <artifactId>lddi.knx.refinementdriver.dpt1.activityhub</artifactId>
-        <version>2.0.2-SNAPSHOT</version>
+        <version>3.0.0</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
