--- a/lddi.bluetooth/lddi.continuahdpmanager.subscriber.test/pom.xml
+++ b/lddi.bluetooth/lddi.continuahdpmanager.subscriber.test/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.universAAL.lddi</groupId>
     <artifactId>lddi.pom.bluetooth</artifactId>
-    <version>3.0.1-SNAPSHOT</version>
+    <version>3.1.0</version>
     <relativePath>../lddi.pom.bluetooth</relativePath>
   </parent>
   <artifactId>lddi.continuahdpmanager.subscriber.test</artifactId>
-  <version>3.0.1-SNAPSHOT</version>
+  <version>3.1.0</version>
   <packaging>bundle</packaging>
   <name>universAAL LDDI Continua Manager service subscriber test</name>
   <description>Subscriber test to receive Continua Health Alliance manager events</description>
