--- a/lddi.bluetooth/lddi.continuahdpmanager.caller.test/pom.xml
+++ b/lddi.bluetooth/lddi.continuahdpmanager.caller.test/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.universAAL.lddi</groupId>
     <artifactId>lddi.pom.bluetooth</artifactId>
-    <version>3.2.0</version>
+    <version>3.2.1-SNAPSHOT</version>
     <relativePath>../lddi.pom.bluetooth</relativePath>
   </parent>
   <artifactId>lddi.continuahdpmanager.caller.test</artifactId>
-  <version>3.2.0</version>
+  <version>3.2.1-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>universAAL LDDI Continua Manager service caller test</name>
   <description>Caller test to request Continua Health Alliance manager services</description>
