--- a/lddi.common/lddi.exporter.activityhub/pom.xml
+++ b/lddi.common/lddi.exporter.activityhub/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.universAAL.lddi</groupId>
     <artifactId>lddi.pom.common</artifactId>
-    <version>3.2.0</version>
+    <version>3.2.1-SNAPSHOT</version>
     <relativePath>../lddi.pom.common</relativePath>
   </parent>
   <artifactId>lddi.exporter.activityhub</artifactId>
-  <version>3.2.0</version>
+  <version>3.2.1-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>universAAL LDDI Exporter of ActivityHub devices (ISO 11073-10471)</name>
   <description>Hardware exporter of Home Automation components based on ISO 11073-10471 devices/model (health device communication - independent living activity hub) for the universAAL middleware</description>
