--- a/lddi.fs20/lddi.fs20.connector/pom.xml
+++ b/lddi.fs20/lddi.fs20.connector/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.universAAL.lddi</groupId>
     <artifactId>lddi.pom.fs20</artifactId>
-    <version>3.2.0</version>
+    <version>3.2.1-SNAPSHOT</version>
     <relativePath>../lddi.pom.fs20</relativePath>
   </parent>
   <artifactId>lddi.fs20.connector</artifactId>
-  <version>3.2.0</version>
+  <version>3.2.1-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>universAAL LDDI FS20 Connector</name>
   <description>Connects the FS20 network to OSGi</description>
